# iraira-game

./: .gitignore  LICENSE  Pipfile  README.md  gui.py  pyproject.toml  wave.ipynb  システム構成図.drawio
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  wave-checkpoint.ipynb
bilibili_emb/src/: main.cpp
code/: audiotest.ipynb  gui.py  sound_sin_wav.py  traction_wave.py  traction_wave_controller.py  traction_wave_player.py
experiment/check_audio/: Pipfile  audiotest.ipynb  wave.ipynb
iraira/: README.md  pyproject.toml
iraira/db/: result.csv
iraira/src/iraira/: __main__.py  analog_input.py  gpio_raspi.py  gui.py  keyboard.py  led_driver.py  main.py  player.py  state.py  switch.py  touch_sensing.py  traction_wave.py  util.py
iraira_analog_emb/: platformio.ini
iraira_analog_emb/src/: main.cpp
traction_controller/: .flake8  Pipfile  install-portaudio.sh  keyboard.py  main.py  pyproject.toml  state.py  traction_contraller.py  traction_wave.py  traction_wave_controller.py
traction_controller/traction_controller/: gui.py  keyboard.py  main.py  player.py  switch.py  traction_wave.py
