[tool.poetry]
name = "traction_controller"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "~3.10"
readchar = "^3.0.5"
numpy = "^1.22.3"

pyaudio = [
    # apt install 
    {version = "^0.2.11", platform = "linux" },

    # Windows binary: Python 3.10 unofficial binary https://www.lfd.uci.edu/~gohlke/pythonlibs/#pyaudio
    {path = "./libs/PyAudio-0.2.11-cp310-cp310-win_amd64.whl", markers = "platform_system == \"Windows\""},
]

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.950"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
profile = "black"
